k8s/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    name: chat
  name: chat
spec:
  template:
    metadata:
      creationTimestamp: null
      labels:
        name: chat
    spec:
      containers:
      - image: cavagrill/phoenix-chat-example
        imagePullPolicy: Always
        name: chat
        ports:
        - containerPort: 4000
      restartPolicy: Always
