k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    name: chat
  name: chat
spec:
  ports:
  - name: phoenix
    port: 4000
    targetPort: 4000
  selector:
    name: chat
  type: NodePort
