k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: chat
spec:
  rules:
  - host: chat.cavagrill.org
    http:
      paths:
      - path: /
        backend:
          serviceName: chat
          servicePort: 4000
  tls:
  - secretName: chat-cavagrill-org-tls
    hosts:
    - chat.cavagrill.org
